package dk.sdu.mmmi.common.data;

public class Entity {
}
