package dk.sdu.mmmi.common.services;

public interface IGamePluginService {
}
