package dk.sdu.mmi.player;

public class Player { // Extends Entity
}
